# TankGameDemo

./: AI.cpp  AI.hpp  CMakeLists.txt  Camera.hpp  Complete.cpp  Complete.hpp  GameLib3D.cpp  GameLib3D.hpp  NaviMap.cpp  NaviMap.hpp  README.md  UIObject.cpp  UIObject.hpp  asset.cpp  asset.hpp  base.cpp  base.hpp  game.cpp  game.hpp  gamecamera.cpp  gamecamera.hpp  gameplay.cpp  gameplay.hpp  gamestatus.cpp  gamestatus.hpp  glad.c  main_loop.cpp  main_process.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  pause.cpp  pause.hpp  play.cpp  play.hpp  playstatus.cpp  playstatus.hpp  point_shadows.fs  quad.fs  (+7 more)
resources/model/Tiger/: Tiger_I.mtl
resources/model/tank/: export3dcoat.mtl
